sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/Order_Stripe_Coupon__c.object-meta.xml
<CustomObject>
    <description>Custom object representing a Stripe Coupon that has been created and synced as part of a Salesforce order.</description>
    <label>Order Stripe Coupon</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Coupon Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Stripe Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>