sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Amount_Off__c.field-meta.xml
<CustomField>
    <fullName>Amount_Off__c</fullName>
    <description>The amount that is taken off the subtotal for the duration of the coupon.</description>
    <inlineHelpText>Amount (in the user's currency) that will be taken off the subtotal of any invoices for this customer.</inlineHelpText>
    <label>Amount Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>