sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Indicates how long the coupon is valid for. Values include once, forever, or repeating.</description>
    <inlineHelpText>One of forever, once, and repeating. Describes how long a customer who applies this coupon will get the discount.</inlineHelpText>
    <label>Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>once</fullName>
                <default>true</default>
                <label>once</label>
            </value>
            <value>
                <fullName>repeating</fullName>
            </value>
            <value>
                <fullName>forever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>