sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Duration_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Months__c</fullName>
    <description>If duration is repeating, the number of months the coupon applies. Null if coupon duration is forever or once.</description>
    <inlineHelpText>If duration is repeating, the number of months the coupon applies. Null if coupon duration is forever or once.</inlineHelpText>
    <label>Duration In Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>