sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The name of the coupon.</description>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>