sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The Id of the Order Record in the Salesforce data set.</description>
    <inlineHelpText>The Id of the Order Record in Salesforce.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Order_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>