sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>Order_Item_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>