sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Percent_Off__c.field-meta.xml
<CustomField>
    <fullName>Percent_Off__c</fullName>
    <description>The percentage off that is taken off the subtotal for the duration of the coupon.</description>
    <inlineHelpText>Percent that will be taken off the subtotal of any invoices for this customer for the duration of the coupon.</inlineHelpText>
    <label>Percent Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>