sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Quote_Stripe_Coupon_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Stripe_Coupon_Id__c</fullName>
    <description>The unique identifier for the initial coupon this coupon was duplicated from.</description>
    <inlineHelpText>The Id of the Quote Stripe Coupon Record in Salesforce that this coupon was duplicated from.</inlineHelpText>
    <label>Quote Stripe Coupon ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>