sfdx/force-app/main/default/objects/Order_Stripe_Coupon__c/fields/Stripe_Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Dashboard_Link__c</fullName>
    <description>Provides a direct link to the Coupon Record for the Order Item represented in Salesforce.</description>
    <inlineHelpText>This link takes you to the Coupon Record in the Stripe Dashboard.</inlineHelpText>
    <formula>&quot;https://dashboard.stripe.com/&quot; &amp; IF($Setup.Organization_Type__c.isSandbox__c, &quot;test/&quot;, &quot;&quot;) &amp; &quot;id/&quot;&amp;Stripe_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Dashboard Link</label>
    <type>Text</type>
</CustomField>